test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/switch_skip_extern_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[63]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  return
  const int(1)
  ;
  extern
  int
  identifier(x)
  ;
  case
  const int(2)
  :
  return
  const int(2)
  ;
  case
  const int(10)
  :
  if
  (
  identifier(x)
  *
  const int(2)
  ==
  const int(30)
  )
  {
  return
  const int(0)
  ;
  }
  default
  :
  return
  const int(5)
  ;
  }
  return
  const int(6)
  ;
  }
  int
  identifier(x)
  =
  const int(15)
  ;
