test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/out_of_scope_extern_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  {
  extern
  int
  identifier(a)
  ;
  }
  return
  identifier(a)
  ;
  }
  int
  identifier(a)
  =
  const int(1)
  ;
